--- a/src-assets/scss/_origin.scss
+++ b/src-assets/scss/_origin.scss
@@ -55,11 +55,11 @@ $h4: 25;
 $h5: $p;
 $h6: $p;
 
-$nav--pinned      : 240;
-$footer--width    : 400;
-$block--max-width : 1140;
-$block--home      : 1200;
-$scrollbar--width : 14;
+$footer--width     : 27;
+$footer--max-width : 400;
+$block--max-width  : 1140;
+$block--home       : 1200;
+$scrollbar--width  : 14;
 
 // Breakpoints used throughout the website
 
