--- a/src-templates/partials/footer.html
+++ b/src-templates/partials/footer.html
@@ -43,10 +43,12 @@
 var loaded = 0,
     onLoad = function(e) {
         if (e) {
-            win.requestAnimationFrame && win.requestAnimationFrame(function() {
-                document.documentElement.className += ' js--anim-in';
-            });
             win.dbushell.onLoad();
+            setTimeout(function() {
+                requestAnimationFrame(function() {
+                    document.documentElement.className += ' js--anim-in';
+                });
+            }, 300);
         }
         if (++loaded >= 2) {
             win.dbushell.init();
