--- a/src-templates/partials/nav.html
+++ b/src-templates/partials/nav.html
@@ -35,9 +35,9 @@
             </a>
         </li>
         <li class="nav__item nav__item--more">
-            <a class="nav__link">
+            <button type="button" class="nav__link">
                 <svg role="presentation"><use xlink:href="{{ site_url }}assets/img/icons.svg#nav"></use></svg>
-            </a>
+            </button>
             <ul class="nav__list nav__dropdown"></ul>
         </li>
     </ul>
