--- a/src-assets/scss/home.scss
+++ b/src-assets/scss/home.scss
@@ -555,10 +555,10 @@
   box-shadow: inset 0 3px 0 0 rgba($yellow, 1);
   padding: em($unit + ($baseline * 1.5)) 0 em($baseline *2) 0;
 
-  @include respond-min($breakpoint--mini)
-  {
+  // @include respond-min($breakpoint--mini)
+  // {
     text-align: center;
-  }
+  // }
 }
 
 .home-clients__quote {
