--- a/src-templates/partials/cta-quote.html
+++ b/src-templates/partials/cta-quote.html
@@ -1,5 +1,5 @@
 <div class="boxed reversed">
     <h3>Get a free quote&hellip;</h3>
-    <p>Interested in working with me? <a href="{{ site_url 'contact' }}">Send me an email</a> with your project requirements and I’ll happily provide a free quote and let you know my availability.</p>
+    <p>Interested in working with me? <a href="{{ site_url 'contact' }}">Send me an email</a> with your requirements and I’ll happily provide a free quote and let you know my availability.</p>
     <a href="{{ site_url 'contact' }}" class="button">Get in Touch</a>
 </div>
