--- a/src-assets/scss/_typography.scss
+++ b/src-assets/scss/_typography.scss
@@ -37,14 +37,19 @@
     &:not([class]):hover {
       outline: 0;
       text-shadow: none;
-      // background-image: linear-gradient(to right, rgba($yellow, 1) 0%, rgba($yellow, 1) 100%);
-      // background-size: 200% 7px;
-      // background-position: 0 90%;
-      animation: animateGradient 200ms forwards;
+      animation: animateGradient 300ms forwards;
     }
 
     .footer & {
       text-shadow: 2px 0 0 $white, -2px 0 0 $white;
+    }
+  }
+
+  .no-cssanimations {
+
+    a:not([class]) {
+      border-bottom-style: solid;
+      border-bottom-width: 1px;
     }
   }
 
@@ -439,6 +444,19 @@
       border-radius: 7px;
       box-shadow: inset 0 0 0 2px $pink,
                   inset 0 0 0 4px $yellow;
+
+      .prose & {
+        max-width: em(720);
+      }
+    }
+  }
+
+  @include respond-max($breakpoint--mini)
+  {
+    .prose .boxed {
+      margin-left: em(-$gutter);
+      margin-right: em(-$gutter);
+      border-radius: 0;
     }
   }
 
