--- a/src-assets/scss/amp.scss
+++ b/src-assets/scss/amp.scss
@@ -7,27 +7,7 @@ $combined-css: true;
 $critical-css: true;
 $combined-css: false;
 
-// .main,
-// .header {
-//     padding-left: 0;
-//     padding-right: 0;
-//     margin-left: 0 !important;
-//     margin-right: 0 !important;
-// }
-
-// .prose {
-//     a:not([class]) {
-//         text-decoration: underline;
-//     }
-// }
-
-// .post__title a {
-//     color: $black;
-//     text-decoration: none !important;
-//     border-bottom: 1px solid rgba($blue, 0.5);
-
-//     &:focus, &:hover {
-//         color: $blue;
-//         // border-bottom: 1px solid rgba($blue, 0.5);
-//     }
-// }
+.main {
+  padding: em($baseline * 2) 0;
+  font-size: 90%;
+}
