--- a/src-assets/scss/combined.scss
+++ b/src-assets/scss/combined.scss
@@ -1,3 +1,18 @@
 $combined-css: true;
-@import "style";
+
+@import "origin";
+
+@import "normalize";
+@import "base";
+
+@import "typography";
+@import "form";
+@import "post";
+@import "folio";
+@import "footer";
+@import "nav";
+
+@import "misc";
+@import "prism";
+
 @import "home";
