--- a/src-assets/scss/critical.scss
+++ b/src-assets/scss/critical.scss
@@ -1,2 +1,13 @@
 $critical-css: true;
-@import "style";
+
+@import "origin";
+
+@import "normalize";
+@import "base";
+
+@import "typography";
+@import "form";
+@import "post";
+@import "folio";
+@import "footer";
+@import "nav";
