fix Prism scss variable

--- a/src-assets/scss/_prism.scss
+++ b/src-assets/scss/_prism.scss
@@ -96,7 +96,7 @@ $prism-color-punctuation:   $prism-color-neutral !default;
         cursor: help;
     }
 
-    &.debug { color: red; }
+    &.debug { color: $red; }
 }
 
 .language-markup {
