--- a/src-templates/partials/header.html
+++ b/src-templates/partials/header.html
@@ -18,7 +18,7 @@ Copyright © David Bushell | @dbushell | http://dbushell.com
 <link rel="apple-touch-icon" href="{{ site_url 'assets/img/apple-touch-icon.png' }}">
 <link rel="canonical" href="{{ site_url path }}">
 <link rel="alternate" type="application/rss+xml" title="dbushell.com RSS Feed" href="{{ site_url 'rss.xml' }}">
-{{# is "single" }}
+{{# is "amp" }}
 <link rel="amphtml" href="{{ site_url path }}amp/">
 <link rel="alternate amphtml" type="text/html" href="{{ site_url path }}amp/">
 {{/ is }}
