--- a/src/templates/partials/header.html
+++ b/src/templates/partials/header.html
@@ -5,11 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="theme-color" content="#ff6680">
-<!--
-
-Copyright © David Bushell | @dbushell | http://dbushell.com
-
--->
+<!-- Copyright © David Bushell | @dbushell -->
 <link rel="dns-prefetch" href="//p.typekit.net">
 <link rel="dns-prefetch" href="//use.typekit.net">
 <link rel="dns-prefetch" href="//www.google-analytics.com">
