--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -16,7 +16,7 @@
   } else if (window.attachEvent) {
     win.attachEvent('onload', onLoad);
   }
-  win.loadScript('/assets/js/main.js?ver={{ siteVer }}', onLoad);
+  win.loadScript('/assets/js/main.min.js?ver={{ siteVer }}', onLoad);
 }(window));
 </script>
 </body>
